--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -1,9 +1,12 @@
+@charset "UTF-8";
 body {
-  background-color: #efe6e6; }
+  background-color: #efe6e6;
+}
 
 .admin-container {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+}
 
 /* AdminControls */
 .controls-container {
@@ -13,34 +16,39 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  /* Button style */ }
-  .controls-container .controls-button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: black;
-    background-color: #ccb1a7;
-    border: 2px solid #ffffff;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    text-decoration: none;
-    margin-right: 10px;
-    font-family: Times New Roman, Serif, serif; }
-  .controls-container .controls-button:hover {
-    background-color: #A26D5D;
-    border-color: #363131; }
+  /* Button style */
+}
+.controls-container .controls-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: black;
+  background-color: #ccb1a7;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  margin-right: 10px;
+  font-family: Times New Roman, Serif, serif;
+}
+.controls-container .controls-button:hover {
+  background-color: #A26D5D;
+  border-color: #363131;
+}
 
 /* AdminTable */
 .admin-head-container {
-  padding-bottom: 75px; }
+  padding-bottom: 75px;
+}
 
 .admin-body-container {
   flex: 1;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .admin-table-container {
   display: flex;
@@ -48,14 +56,16 @@ body {
   border-radius: 5px;
   margin-left: 20px;
   margin-bottom: 400px;
-  margin-top: 80px; }
-  .admin-table-container .admin-table-container table {
-    width: 100%;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
-    border: 2px solid #363131;
-    border-radius: 5px;
-    flex: 1; }
+  margin-top: 80px;
+}
+.admin-table-container .admin-table-container table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  border: 2px solid #363131;
+  border-radius: 5px;
+  flex: 1;
+}
 
 .admin-table-container thead {
   background-color: #A26D5D;
@@ -64,45 +74,54 @@ body {
   text-transform: capitalize;
   text-align: center;
   font-weight: bold;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+}
 
 .admin-table-container thead :hover {
-  border-color: #363131; }
+  border-color: #363131;
+}
 
 .admin-table thead th,
 .admin-table-container tbody td {
   padding: 10px;
   font-size: 16px;
-  text-align: center; }
+  text-align: center;
+}
 
 .admin-table-container tbody tr {
   border-bottom: 1px solid #363131;
   background-color: #ffffff;
-  position: relative; }
+  position: relative;
+}
 
 .admin-table-container tbody tr:hover {
   background-color: #e5e3e3;
-  transition: background-color 0.6s ease; }
+  transition: background-color 0.6s ease;
+}
 
 .admin-table-container tbody tr:hover td {
   color: transparent;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .admin-table-container tbody tr:hover::after {
-  content: "\1F50D";
+  content: "🔍";
   font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1; }
+  z-index: 1;
+}
 
 .admin-table-container table {
   border-color: #363131;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .sortLabel:hover {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /*
   Checkbox styling
@@ -117,14 +136,16 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+}
 
 .filter-checkboxes input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
   height: 0;
-  width: 0; }
+  width: 0;
+}
 
 .checkmark {
   position: absolute;
@@ -132,21 +153,26 @@ body {
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: white; }
+  background-color: white;
+}
 
 .filter-checkboxes:hover input ~ .checkmark {
-  background-color: #ccc; }
+  background-color: #ccc;
+}
 
 .filter-checkboxes:checked ~ .checkmark {
-  background-color: #363131; }
+  background-color: #363131;
+}
 
 .checkmark:after {
   content: "";
   position: absolute;
-  display: none; }
+  display: none;
+}
 
 .filter-checkboxes input:checked ~ .checkmark:after {
-  display: block; }
+  display: block;
+}
 
 .filter-checkboxes .checkmark:after {
   left: 9px;
@@ -157,14 +183,16 @@ body {
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
-  transform: rotate(45deg); }
+  transform: rotate(45deg);
+}
 
 /* */
 /*
   Add product styling
  */
 .apply-button {
-  margin-top: 20px; }
+  margin-top: 20px;
+}
 
 .apply-button button {
   background-color: #007bff;
@@ -173,10 +201,12 @@ body {
   border-radius: 3px;
   padding: 10px 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease; }
+  transition: background-color 0.3s ease;
+}
 
 .apply-button button:hover {
-  background-color: #0056b3; }
+  background-color: #0056b3;
+}
 
 /*
   Error container
@@ -184,45 +214,55 @@ body {
 .err-container {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .err-container div {
-  width: 80%; }
+  width: 80%;
+}
 
 .err {
   color: red;
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 .err-container div {
-  width: 80%; }
+  width: 80%;
+}
 
 .err {
   color: red;
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 .address-input input.invalid-input,
 .create-input input.invalid-input,
 .edit-input input.invalid-input {
-  border: 2px solid red; }
+  border: 2px solid red;
+}
 
 .size-selector.invalid-input {
-  border: 2px solid red; }
+  border: 2px solid red;
+}
 
 .testing-link-container {
   display: flex;
   justify-content: center;
   margin: 50px;
   padding: 20px;
-  border: black solid 2px; }
+  border: black solid 2px;
+}
 
 .testing-header {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .red-text {
   color: red;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 /*
      Sort image and button
@@ -231,19 +271,23 @@ body {
   display: flex;
   flex-direction: row;
   margin-top: 50px;
-  margin-left: 30px; }
+  margin-left: 30px;
+}
 
 .sort-icon > img {
   width: 30px;
-  height: 30px; }
+  height: 30px;
+}
 
 .sort-button > h1 {
   font-size: 18px;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+}
 
 .sort-button {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 /*
    End of sort
@@ -251,19 +295,22 @@ body {
 #profilePhoto {
   width: 100px;
   height: 100px;
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 /*
     Admin side bar menu
  */
 .side-menu {
   width: 200px;
-  background-color: #ccb1a7; }
+  background-color: #ccb1a7;
+}
 
 /*
    Filters container on the right
  */
 .filter-box {
-  width: 200px; }
+  width: 200px;
+}
 
 /*# sourceMappingURL=Admin.css.map */
