--- a/client/src/css/TShirtLayout.css
+++ b/client/src/css/TShirtLayout.css
@@ -10,17 +10,20 @@
  */
 .tshirts-container {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .tshirts-rows {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+}
 
 .tshirt-image {
   width: 100%;
   height: auto;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 /*# sourceMappingURL=TShirtLayout.css.map */
