--- a/client/src/css/TShirtLayout.css
+++ b/client/src/css/TShirtLayout.css
@@ -1,13 +1,11 @@
 .tshirt-image {
   width: 100%;
   height: auto;
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 .photo-65e061aad02190677027082d {
   width: 250px;
   height: 250px;
-  padding-left: 50%;
-}
+  padding-left: 50%; }
 
 /*# sourceMappingURL=TShirtLayout.css.map */
