--- a/client/src/css/Filters.css
+++ b/client/src/css/Filters.css
@@ -1,6 +1,8 @@
 .filter-container {
   width: 300px;
   padding: 20px;
+  position: relative;
+  margin-top: 30px;
   /* Styling for filter dropdown menus */ }
   .filter-container .filter-buttons {
     margin: 10px;
@@ -11,9 +13,9 @@
   .filter-container .filter-dropdown-menu {
     display: none;
     top: 0;
-    left: 100%;
-    padding: 10px;
-    z-index: 1; }
+    left: 0;
+    width: 100%;
+    padding: 10px; }
   .filter-container .filter-dropdown-menu label {
     display: flex;
     align-items: center;
@@ -123,22 +125,26 @@
   display: flex;
   padding-left: 20px;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+  position: relative; }
 
 .filter-button > h1 {
   font-size: 18px;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+  margin-left: 200px; }
+
+.filter-icon {
+  position: absolute;
+  margin-top: 25px;
+  margin-right: 10px; }
 
 .filter-icon:hover {
   cursor: pointer; }
 
 .filter-icon > img {
-  width: 30px;
-  height: 30px; }
-
-.filter-container {
-  width: 150px;
-  border: none;
+  width: 45px;
+  height: 45px;
+  margin-left: 85px;
   position: absolute; }
 
 .filter-container > fieldset {
@@ -148,9 +154,8 @@
 
 .filter-box {
   display: flex;
-  /*flex-direction: column;*/
-  align-items: center;
-  /* margin-left: auto;*/ }
+  flex-direction: column;
+  padding-left: 150px; }
 
 /*
   Price and stock slider
