--- a/client/src/scss/Admin.scss
+++ b/client/src/scss/Admin.scss
@@ -2,14 +2,17 @@
 
 body {
   background-color: #efe6e6;
+  margin: 0;
+  min-height:100vh;
 }
 
 .admin-container {
   display: flex;
-  flex-direction: row;
+
 }
 
 /* AdminControls */
+/*
 .controls-container {
   height: 100px;
   margin: 20px;
@@ -17,8 +20,8 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-
   /* Button style */
+/*
   .controls-button {
     display: inline-block;
     padding: 10px 20px;
@@ -35,12 +38,12 @@ body {
     margin-right: 10px;
     font-family: $title_font;
   }
-
   .controls-button:hover {
     background-color: #A26D5D;
     border-color: $grey-border;
   }
 }
+*/
 
 /* AdminTable */
 
@@ -49,26 +52,26 @@ body {
 }
 
 .admin-body-container {
-  flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .admin-table-container {
   display: flex;
   justify-content: center;
   border-radius: 5px;
-  margin-left: 20px;
   margin-bottom: 400px;
-  margin-top:80px;
+  margin-top: 80px;
+  margin-left: 40px;
 
   .admin-table-container table {
+    padding: 30px;
     width: 100%;
     border-collapse: collapse;
     font-family: Arial, sans-serif;
     border: 2px solid $grey-border;
     border-radius: 5px;
-    flex: 1;
   }
 }
 
@@ -88,7 +91,7 @@ body {
 
 .admin-table thead th,
 .admin-table-container tbody td {
-  padding: 10px;
+  padding: 20px;
   font-size: 16px;
   text-align: center;
 }
@@ -282,12 +285,7 @@ body {
      Sort image and button
  */
 
-.sort-box {
-  display: flex;
-  flex-direction: row;
-  margin-top: 50px;
-  margin-left: 30px;
-}
+
 
 .sort-icon > img {
   width: 30px;
@@ -303,6 +301,7 @@ body {
 .sort-button {
   display: flex;
   flex-direction: column;
+  margin-left: 20px;
 }
 
 /*
@@ -320,14 +319,41 @@ body {
  */
 .side-menu {
   width: 200px;
-  //background-color: $sub-colour;
   background-color: #ccb1a7;
+  top: 0;
+  bottom: 0;
+  padding: 20px;
+  z-index: 1;
 }
 
 /*
-   Filters container on the right
+   Position sort and filter beside eachother
  */
+.sort-box {
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+}
 
 .filter-box {
-  width: 200px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  right: 0;
+  padding: 10px;
 }
+
+/*
+    User table
+ */
+
+/*
+.user-table {
+  .user-table table {
+    padding: 30px;
+    width: 100%;
+  }
+}
+*/
+
